creating activity_game.xml layout

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="blue_main">#6ebdff</color>
     <color name="white">#FFFFFF</color>
+    <color name="red">#FFFF021D</color>
 </resources>
