--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.tamato.hangdroid.GameActivity">
+    tools:context="org.tamato.hangdroid.GameActivity"
+    android:background="#ffffff">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -33,16 +34,18 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/editTextLetter"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:textSize="30dp" />
+            android:textSize="30dp"
+            android:maxLength="1" />
 
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="Check Letter"
-            android:id="@+id/button4" />
+            android:id="@+id/button4"
+            android:onClick="introduceLetter" />
     </LinearLayout>
 
     <LinearLayout
