--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
             android:text="Multiplayer"
             android:id="@+id/button2"
             android:layout_marginBottom="10dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:onClick="startMultiplayer" />
 
         <Button
             android:layout_width="wrap_content"
