--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:text="SAVE SCORE"
             android:id="@+id/btnSaveScore"
-            android:onClick="" />
+            android:onClick="saveScore" />
 
         <EditText
             android:layout_width="fill_parent"
