--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Insert Letter"
+            android:text="Insert Letter: "
             android:id="@+id/textView2"
             android:layout_marginLeft="40dp"
             android:layout_marginBottom="10dp" />
@@ -38,7 +38,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:textSize="30dp"
-            android:maxLength="1" />
+            android:maxLength="1"
+            android:textColor="#298cff" />
 
         <Button
             android:layout_width="wrap_content"
@@ -64,7 +65,8 @@
             android:text="_"
             android:id="@+id/textView3"
             android:layout_marginRight="5dp"
-            android:textSize="40dp" />
+            android:textSize="40dp"
+            android:textColor="#298cff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -73,7 +75,8 @@
             android:text="_"
             android:id="@+id/textView4"
             android:layout_marginRight="5dp"
-            android:textSize="40dp" />
+            android:textSize="40dp"
+            android:textColor="#298cff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,7 +85,8 @@
             android:text="_"
             android:id="@+id/textView5"
             android:layout_marginRight="5dp"
-            android:textSize="40dp" />
+            android:textSize="40dp"
+            android:textColor="#298cff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,6 +94,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="_"
             android:id="@+id/textView6"
+            android:textColor="#298cff"
             android:textSize="40dp" />
     </LinearLayout>
 
