--- a/app/src/main/res/layout/activity_multiplayer.xml
+++ b/app/src/main/res/layout/activity_multiplayer.xml
@@ -4,7 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.tamato.hangdroid.Multiplayer">
+    tools:context="org.tamato.hangdroid.Multiplayer"
+    android:textAlignment="center"
+    android:background="@drawable/gradient_background">
 
     <EditText
         android:layout_width="200dp"
@@ -12,7 +14,8 @@
         android:layout_centerInParent="true"
         android:maxLength="10"
         android:id="@+id/editTextWord"
-        android:hint="Word to play with" />
+        android:hint="Word to play with"
+        android:paddingLeft="25dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -21,5 +24,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Play"
-        android:onClick="startMultiplayerGame" />
+        android:onClick="startMultiplayerGame"
+        android:id="@+id/btnPlay" />
 </RelativeLayout>
