--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -4,15 +4,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.tamato.hangdroid.ScoresActivity">
+    tools:context="org.tamato.hangdroid.ScoresActivity"
+    android:background="@drawable/gradient_background">
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <TextView android:text="@string/hello_world"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewScores"/>
+            android:id="@+id/textViewScores" />
 
     </ScrollView>
 
