--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -2,7 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.tamato.hangdroid.GameActivity"
-    android:background="#ffffff">
+    android:background="@color/background_color">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Game Over"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:gravity="center|top"
+        android:textSize="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="#000000" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -10,8 +25,7 @@
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/game_over"
-        android:layout_marginTop="20dp" />
+        android:src="@drawable/game_over" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -19,23 +33,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/gradient_background"
-        android:id="@+id/layoutAddLetter">
+        android:background="@color/background_color"
+        android:id="@+id/layoutAddLetter"
+        android:paddingBottom="10dp">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SAVE SCORE"
             android:id="@+id/btnSaveScore"
-            android:onClick="saveScore" />
+            android:onClick="saveScore"
+            android:background="@color/button_background"
+            android:textColor="@color/blue"
+            android:padding="15dp"
+            android:layout_marginLeft="10dp" />
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="INSERT YOUR NAME"
             android:id="@+id/editTextName"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="20dp"
+            android:gravity="center" />
     </LinearLayout>
 
     <LinearLayout
@@ -61,11 +83,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Points"
+            android:text="points"
             android:id="@+id/textViewPointsString"
             android:layout_marginRight="5dp"
             android:textSize="40dp"
-            android:textColor="#298cff" />
+            android:textColor="@color/blue"
+            android:gravity="center" />
     </LinearLayout>
 
     <TextView
@@ -73,11 +96,10 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/failedLetters"
+        android:layout_marginTop="133dp"
+        android:textColor="@color/red"
         android:layout_alignTop="@+id/imageView"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/red" />
+        android:layout_toRightOf="@+id/layoutLetters"
+        android:layout_toEndOf="@+id/layoutLetters" />
 
 </RelativeLayout>
