--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,53 +4,82 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@drawable/gradient_background"
+    android:background="@color/background_color"
     android:clickable="true">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:id="@+id/linearLayout">
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Single Player"
-            android:id="@+id/btnSingleplayer"
-            android:layout_marginBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="HangDroid"
+            android:id="@+id/textViewGameTitle"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="40dp"
+            android:textColor="@color/blue"
             android:layout_gravity="center_horizontal"
-            android:onClick="startSinglePlayer" />
+            android:layout_margin="10dp" />
+
+        <ImageView
+            android:layout_width="130dp"
+            android:layout_height="120dp"
+            android:id="@+id/imageView2"
+            android:background="@drawable/hangdroid_0"
+            android:layout_alignLeft="@+id/textViewGameTitle"
+            android:layout_alignStart="@+id/textViewGameTitle"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/textViewGameTitle"
+            android:layout_alignRight="@+id/textViewGameTitle"
+            android:layout_alignEnd="@+id/textViewGameTitle"
+            android:layout_margin="20dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:text="Multiplayer"
+            android:text="New Single Player Game"
+            android:id="@+id/btnSingleplayer"
+            android:layout_gravity="center_horizontal"
+            android:onClick="startSinglePlayer"
+            android:layout_margin="10dp"
+            android:background="@color/button_background"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColor="@color/blue" />
+
+        <Button
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:text="New Multiplayer Game"
             android:id="@+id/btnMultiplayer"
             android:layout_marginBottom="10dp"
             android:layout_gravity="center_horizontal"
-            android:onClick="startMultiplayer" />
+            android:onClick="startMultiplayer"
+            android:background="@color/button_background"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColor="@color/blue"/>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="Scores"
             android:id="@+id/btnScores"
             android:layout_marginBottom="10dp"
             android:layout_gravity="center_horizontal"
-            android:onClick="openScoresActivity"/>
+            android:onClick="openScoresActivity"
+            android:background="@color/button_background"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:textColor="@color/blue" />
+
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Hang Droid"
-        android:id="@+id/textViewGameTitle"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:textSize="40dp"
-        android:textColor="@color/blue_main" />
 </RelativeLayout>
