--- a/app/src/main/res/layout/activity_multiplayer.xml
+++ b/app/src/main/res/layout/activity_multiplayer.xml
@@ -6,24 +6,31 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.tamato.hangdroid.Multiplayer"
     android:textAlignment="center"
-    android:background="@drawable/gradient_background">
+    android:background="@color/background_color">
 
     <EditText
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:maxLength="10"
         android:id="@+id/editTextWord"
         android:hint="Word to play with"
+        android:textColor="@color/blue"
+        android:textSize="25dp"
         android:paddingLeft="25dp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_below="@+id/editTextWord"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Play"
         android:onClick="startMultiplayerGame"
-        android:id="@+id/btnPlay" />
+        android:id="@+id/btnPlay"
+        android:background="@color/button_background"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:textColor="@color/blue" />
 </RelativeLayout>
