--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="org.tamato.hangdroid.ScoresActivity"
-    android:background="@drawable/gradient_background">
+    android:background="@color/background_color">
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
@@ -13,7 +13,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewScores" />
+            android:id="@+id/textViewScores"
+            android:textColor="@color/blue"
+            android:textSize="25dp" />
 
     </ScrollView>
 
