--- a/app/src/main/res/layout/multiplayer_activity_game.xml
+++ b/app/src/main/res/layout/multiplayer_activity_game.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.tamato.hangdroid.GameActivity"
-    android:background="#ffffff">
+    android:background="#939393">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -10,8 +10,7 @@
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/hangdroid_0"
-        android:layout_marginTop="20dp" />
+        android:src="@drawable/hangdroid_0" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -19,34 +18,33 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/gradient_background"
-        android:id="@+id/layoutAddLetter">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Insert Letter: "
-            android:id="@+id/textView2"
-            android:layout_marginLeft="40dp"
-            android:layout_marginBottom="10dp" />
+        android:background="@color/background_color"
+        android:id="@+id/layoutAddLetter"
+        android:padding="10dp">
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:hint="INSERT A LETTER"
             android:id="@+id/editTextLetter"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:textSize="30dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             android:maxLength="1"
-            android:textColor="#298cff" />
+            android:textColor="@color/blue"
+            android:background="@color/background_color"
+            android:paddingRight="20dp"
+            android:gravity="center"
+            android:textSize="20dp" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Check Letter"
-            android:id="@+id/btnCheckLetter"
-            android:onClick="introduceLetter" />
+            android:id="@+id/button4"
+            android:onClick="introduceLetter"
+            android:background="@color/button_background"
+            android:textColor="@color/blue"
+            android:padding="15dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -55,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/layoutAddLetter"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:id="@+id/layoutLetters">
 
         <TextView
@@ -66,7 +64,7 @@
             android:id="@+id/textView3"
             android:layout_marginRight="5dp"
             android:textSize="40dp"
-            android:textColor="#298cff" />
+            android:textColor="@color/blue" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +74,7 @@
             android:id="@+id/textView4"
             android:layout_marginRight="5dp"
             android:textSize="40dp"
-            android:textColor="#298cff" />
+            android:textColor="@color/blue" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -86,7 +84,7 @@
             android:id="@+id/textView5"
             android:layout_marginRight="5dp"
             android:textSize="40dp"
-            android:textColor="#298cff" />
+            android:textColor="@color/blue" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,8 +92,8 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="_"
             android:id="@+id/textView6"
-            android:textSize="40dp"
-            android:textColor="#298cff" />
+            android:textColor="@color/blue"
+            android:textSize="40dp" />
     </LinearLayout>
 
     <TextView
@@ -103,11 +101,10 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/failedLetters"
+        android:layout_marginTop="133dp"
+        android:textColor="@color/red"
         android:layout_alignTop="@+id/imageView"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/red" />
+        android:layout_toRightOf="@+id/layoutLetters"
+        android:layout_toEndOf="@+id/layoutLetters" />
 
 </RelativeLayout>
