--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue_main">#6ebdff</color>
+    <color name="blue">#298cff</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#FFFF021D</color>
+    <color name="background_color">#939393</color>
+    <color name="button_background">#3c3c3c</color>
 </resources>
