modifying score activity design and colors

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">#298cff</color>
+    <color name="blue">#FF119991</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#FFFF021D</color>
     <color name="background_color">#939393</color>
