--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -17,7 +17,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:paddingTop="10dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -88,7 +89,8 @@
             android:layout_marginRight="5dp"
             android:textSize="40dp"
             android:textColor="@color/blue"
-            android:gravity="center" />
+            android:gravity="center"
+            android:paddingBottom="10dp" />
     </LinearLayout>
 
     <TextView
